Added missing library dependencies
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@164 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/trunk/parflow/config/Makefile.config.in
+++ b/trunk/parflow/config/Makefile.config.in
@@ -50,8 +50,10 @@ PARFLOW_LIB_DIR                 = $(OBJECT)/lib
 PARFLOW_BIN_DIR                 = $(OBJECT)/bin
 
 AMPS_LIBS                       = @AMPS_LIBS@
+AMPS_LIB_DEPEND                 = @AMPS_LIB_DEPEND@
 
 PARFLOW_LIBS = -L$(PARFLOW_LIB_DIR) -lparflow $(CLM_LIBS) $(AMPS_LIBS)
+PARFLOW_LIB_DEPEND = $(PARFLOW_LIB_DIR)/libparflow.a
 
 LIB_SUFFIX=@LIB_SUFFIX@
 
