Added dependency on amps libs
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow@165 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/trunk/parflow/parflow_lib/Makefile.in
+++ b/trunk/parflow/parflow_lib/Makefile.in
@@ -157,7 +157,7 @@ OBJS = \
 	write_parflow_binary.o \
 	wrf_parflow.o
 
-$(PARFLOW_LIB_DIR)/$(PARFLOW_LIB): $(OBJS)
+$(PARFLOW_LIB_DIR)/$(PARFLOW_LIB): $(OBJS) $(AMPS_LIB_DEPEND)
 	@AR@ ru $(PARFLOW_LIB_DIR)/$(PARFLOW_LIB) $(OBJS)
 
 all: $(PARFLOW_LIB_DIR)/$(PARFLOW_LIB)
