Code reverted back to parflow_lsm_megan version
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smith84@177 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/parflow/Makefile.in
+++ b/parflow/Makefile.in
@@ -16,7 +16,7 @@ SUBDIR        = .
 SRCDIR        = @srcdir@
 OBJECT        = .
 
-SUBDIRS = amps $(CLM_DIR) parflow_lib parflow 
+SUBDIRS = amps $(CLM_DIR) kinsol parflow_lib parflow 
 
 all:
 	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
