Added support for CLM tests that are optional
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smithsg@210 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/parflow/Makefile.in
+++ b/parflow/Makefile.in
@@ -33,11 +33,15 @@ veryclean: clean
 install: all
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/lib
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/bin
+	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/config
 	for i in lib/*; do				        \
 	   $(INSTALL) -c -m 644 $$i $(PARFLOW_INSTALL_DIR)/lib; \
 	done
 	for i in bin/*; do				        \
 	   $(INSTALL) -c -m 755 $$i $(PARFLOW_INSTALL_DIR)/bin; \
+	done
+	for i in config/*; do				        \
+	   $(INSTALL) -c -m 644 $$i $(PARFLOW_INSTALL_DIR)/config; \
 	done
 	for i in batchmc bootmc freemc getmc killmc peekmc run; do           \
 	   $(INSTALL) -c -m 755 $(PARFLOW)/amps/$(AMPS)/$$i $(PARFLOW_INSTALL_DIR)/bin; \
