--- a/parflow/config/Makefile.config.in
+++ b/parflow/config/Makefile.config.in
@@ -82,6 +82,8 @@ AR	      = @AR@
 LDFLAGS       = @LD_FLAGS@ -L$(PARFLOW_LIB_DIR) @LIB_PATH@ $(LDFLAGS_EXTRA)
 LDLIBS        = $(LDLIBS_EXTRA) @LIB_NAME@
 
+PARFLOW_HAVE_CLM      = @PARFLOW_HAVE_CLM@
+
 ######################################################################
 # Rules used in all directories.
 ######################################################################
