--- a/parflow/configure.in
+++ b/parflow/configure.in
@@ -141,13 +141,16 @@ dnl CLM_DIR is empty when not building with CLM.  This will case the
 dnl directory to be skipped in the compilation.
 CLM_DIR=""
 CLM_LIBS=""
+PARFLOW_HAVE_CLM="no"
 if test "$with_clm" = "yes"; then
+   PARFLOW_HAVE_CLM="yes"
    CLM_DIR="clm"
    CLM_LIBS="-lclm"
    AC_DEFINE(HAVE_CLM)	  
 fi
 AC_SUBST(CLM_DIR)
 AC_SUBST(CLM_LIBS)
+AC_SUBST(PARFLOW_HAVE_CLM)
 
 dnl
 dnl Fortran 90
