Added F90 config file for platform specific options
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smithsg@215 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/parflow/clm/Makefile.in
+++ b/parflow/clm/Makefile.in
@@ -18,6 +18,7 @@ include $(OBJECT)/config/Makefile.config
 
 # Order is important due to .mod file creation
 OBJS = \
+	parflow_config.o\
 	precision.o\
 	infnan.o\
 	clm_varpar.o\
