Added chunk to parflow
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smithsg@219 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/pftools/Makefile.in
+++ b/pftools/Makefile.in
@@ -19,7 +19,7 @@ SUBDIR        = .
 VPATH	      =	@srcdir@
 OBJECT        = .
 
-SUBDIRS       = docs
+SUBDIRS       = chunk docs
 
 SCRIPTS = \
 	pfhelp \
