Added configure option for chunk. Fixed SILO writer to write to specified file rather than hardcoded name.
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smithsg@223 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/pftools/config/Makefile.config.in
+++ b/pftools/config/Makefile.config.in
@@ -39,6 +39,8 @@ PARFLOW_LIB_DEPEND = $(PARFLOW_LIB_DIR)/libparflow.a
 
 PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 
+CHUNK_DIR=@CHUNK_DIR@
+
 # Need to link to the tk/tcl libs
 # tk/tcl libs need X11 and dynamic link stuff in dl
 #
