--- a/pfsimulator/configure.in
+++ b/pfsimulator/configure.in
@@ -352,12 +352,12 @@ if test "${samrai_PREFIX+set}" = set; then
   LIB_PATH="$samrai_LIB_PATH $LIB_PATH"
   LIB_NAME="$samrai_LIB_NAME $LIB_NAME"
   INC_PATH="$samrai_INCLUDES $INC_PATH"
+  SAMRAI_DIR="$samrai_PREFIX"
 else
-  AC_MSG_NOTICE([NOTIFICATION: Parflow configured without the SAMRAI library])
-  AC_DEFINE([LACKS_SAMRAI],[1],[SAMRAI library is missing])
+  AC_MSG_ERROR([Error: Parflow configured without the SAMRAI library])
 fi
 AC_SUBST(PARFLOW_HAVE_SAMRAI)
-
+AC_SUBST(SAMRAI_DIR)
 
 dnl
 dnl Check if BSD gettimeofday is present
