--- a/pfsimulator/config/parflow_config.h.in
+++ b/pfsimulator/config/parflow_config.h.in
@@ -130,5 +130,22 @@
 /* Define if you have the 'mallinfo' function. */
 #undef HAVE_MALLINFO
 
+/*
+ * Prevent inclusion of mpi C++ bindings in mpi.h includes.
+ * This is done in here rather than amps.h since other
+ * files include MPI.h.
+ */
+#ifndef MPI_NO_CPPBIND
+#define MPI_NO_CPPBIND
+#endif
+
+#ifndef MPICH_SKIP_MPICXX
+#define MPICH_SKIP_MPICXX
+#endif
+
+#ifndef OMPI_SKIP_MPICXX
+#define OMPI_SKIP_MPICXX
+#endif
+
 
 #endif
