Added 2D grid hierarchy to SAMRAI
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/samrai@518 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/pfsimulator/parflow_lib/Makefile.depend
+++ b/pfsimulator/parflow_lib/Makefile.depend
@@ -40,6 +40,7 @@ DEPENDS_1:=\
 	$(SAMRAI_DIR)/include/SAMRAI/pdat/CellIndex.h			\
 	$(SAMRAI_DIR)/include/SAMRAI/pdat/CellVariable.h		\
 	$(SAMRAI_DIR)/include/SAMRAI/tbox/Database.h			\
+	$(SAMRAI_DIR)/include/SAMRAI/tbox/MemoryDatabase.h		\
 	$(SAMRAI_DIR)/include/SAMRAI/tbox/Pointer.h			\
 	$(SAMRAI_DIR)/include/SAMRAI/xfer/CoarsenAlgorithm.h		\
 	$(SAMRAI_DIR)/include/SAMRAI/xfer/RefineAlgorithm.h Parflow.cxx	\
